[package]
name = "cronjob-log-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "CronJob log monitor: detects stuck pods (no log activity) and terminates them"
license = "Apache-2.0 OR MIT"
readme = "README.md"

[[bin]]
name = "cronjob-log-monitor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
kube = { version = "2.0", features = ["runtime", "derive", "client", "rustls-tls"], default-features = false }
kube-runtime = "2.0"
k8s-openapi = { version = "0.26", default-features = false, features = ["v1_30"] }
regex = "1.10"
rustls = { version = "0.23", features = ["ring"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# DogStatsD for Datadog metrics
cadence = "1.4"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
correctness = "warn"
suspicious = "warn"
